--- a/popup.html
+++ b/popup.html
@@ -5,14 +5,33 @@
     <link rel="stylesheet" type="text/css" href="assets/bootswatch.min.css">
     <style type="text/css">
         body {
-            min-width: 500px;
+            min-width: 570px;
+            background-color: #dedede;
         }
         .panel {
             margin-bottom: 10px;
-            text-align: center;
         }
         .row:first-child {
             margin-top: 10px;
+        }
+        .col-xs-6 {
+            padding-right: 7.5px;
+            padding-left: 7.5px;
+        }
+        .col-xs-6 .row:first-child {
+            margin-top: 0px;
+        }
+        .panel-body .col-xs-12 {
+            padding-left: 5px;
+        }
+        .panel-body {
+            padding-top: 5px;
+        }
+        h4,h5 {
+            text-align: center;
+        }
+        img {
+            width: 30px;
         }
     </style>
 </head>
@@ -21,9 +40,31 @@
         <div class="row">
             <div class="col-xs-6" ng-repeat="game in games">
                 <div class="panel panel-default">
-                    <div class="panel-heading">{{game.hTeam.triCode}} vs. {{game.vTeam.triCode}}</div>
                     <div class="panel-body">
-                        {{game.hTeam.score}} - {{game.vTeam.score}}
+                        <div class="col-xs-12">
+                            <div class="row">
+                                <h4 ng-if="game.hTeam.linescore.length == 0">--</h4>
+                                <h4 ng-if="!game.clock=='' && game.hTeam.linescore.length">
+                                    Quarter {{game.period.current}} - {{game.clock}} 
+                                </h4>
+                                <h4 ng-if="game.clock=='' && game.hTeam.linescore.length">End of Game</h4>
+                                <h5><img src="{{game.hTeam.img}}"> <b>{{game.hTeam.score}}</b> - <b>{{game.vTeam.score}}</b> <img src="{{game.vTeam.img}}"></h5>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-2 col-xs-offset-2"><b>Q1</b></div>
+                                <div class="col-xs-2"><b>Q2</b></div>
+                                <div class="col-xs-2"><b>Q3</b></div>
+                                <div class="col-xs-2"><b>Q4</b></div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-2">{{game.hTeam.triCode}}</div>
+                                <div class="col-xs-2" ng-repeat="quarter in game.hTeam.linescore">{{quarter.score}}</div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-2">{{game.vTeam.triCode}}</div>
+                                <div class="col-xs-2" ng-repeat="quarter in game.vTeam.linescore">{{quarter.score}}</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
