--- a/nfl.html
+++ b/nfl.html
@@ -3,74 +3,49 @@
 <head>
     <title>NFL Box Scores</title>
     <link rel="stylesheet" type="text/css" href="assets/bootswatch.min.css">
-    <style type="text/css">
-        body {
-            min-width: 570px;
-            background-color: #dedede;
-        }
-        .panel {
-            margin-bottom: 10px;
-        }
-        .row:first-child {
-            margin-top: 10px;
-        }
-        .col-xs-6 {
-            padding-right: 7.5px;
-            padding-left: 7.5px;
-        }
-        .col-xs-6 .row:first-child {
-            margin-top: 0px;
-        }
-        .panel-body .col-xs-12 {
-            padding-left: 5px;
-        }
-        .panel-body {
-            padding-top: 5px;
-        }
-        h4,h5 {
-            text-align: center;
-        }
-        img {
-            width: 30px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
-<body>
+<body ng-enter="nba.html">
     <div class="container">
-        <a href="popup.html" accesskey="b"></a>
+        <div class="row">
+            <p>Press Enter Anywhere to Toggle</p> 
+            <div class="btn-group btn-group-justified col-md-12">
+                <a href="nba.html" class="btn btn-danger">SEE NBA</a>
+            </div>
+            <br/>
+        </div>
         <div class="row">
             <div class="col-xs-6" ng-repeat="game in games">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <div class="col-xs-12">
-                            <div class="row">
-                                <h4 ng-if="game.qtr=='Final'">Final</h4>
-                                <h4 ng-if="game.qtr=='Pregame'">Pregame</h4>
-                                <h4 ng-if="game.qtr=='Halftime'">Halftime</h4>
-                                <h4 ng-if="game.qtr==null">--</h4>
-                                <h4 ng-if="game.qtr!='Final' && game.qtr!='Halftime' && game.qtr!=null">Quarter {{game.qtr}} - {{game.clock}}</h4>
-                                <h5><img src="http://i.nflcdn.com/static/site/7.4/img/logos/teams-matte-80x53/{{game.home.abbr}}.png"> <b>{{game.home.score.T}}</b> - <b>{{game.away.score.T}}</b> <img src="http://i.nflcdn.com/static/site/7.4/img/logos/teams-matte-80x53/{{game.away.abbr}}.png"></h5>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-2 col-xs-offset-2"><b>Q1</b></div>
-                                <div class="col-xs-2"><b>Q2</b></div>
-                                <div class="col-xs-2"><b>Q3</b></div>
-                                <div class="col-xs-2"><b>Q4</b></div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-2">{{game.home.abbr}}</div>
-                                <div class="col-xs-2"><b>{{game.home.score[1]}}</b></div>
-                                <div class="col-xs-2"><b>{{game.home.score[2]}}</b></div>
-                                <div class="col-xs-2"><b>{{game.home.score[3]}}</b></div>
-                                <div class="col-xs-2"><b>{{game.home.score[4]}}</b></div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-2">{{game.away.abbr}}</div>
-                                <div class="col-xs-2"><b>{{game.away.score[1]}}</b></div>
-                                <div class="col-xs-2"><b>{{game.away.score[2]}}</b></div>
-                                <div class="col-xs-2"><b>{{game.away.score[3]}}</b></div>
-                                <div class="col-xs-2"><b>{{game.away.score[4]}}</b></div>
-                            </div>
+                        <div class="row">
+                            <h4 ng-if="game.qtr=='Final'">Final</h4>
+                            <h4 ng-if="game.qtr=='Pregame'">Pregame</h4>
+                            <h4 ng-if="game.qtr=='Halftime'">Halftime</h4>
+                            <h4 ng-if="game.qtr==null">--</h4>
+                            <h4 ng-if="game.qtr!='Final' && game.qtr!='Halftime' && game.qtr!=null &&game.qtr!='final overtime'">Quarter {{game.qtr}} - {{game.clock}}</h4>
+                            <h4 ng-if="game.qtr=='final overtime'">Final Overtime</h4>
+                            <h5><img src="http://i.nflcdn.com/static/site/7.4/img/logos/teams-matte-80x53/{{game.home.abbr}}.png"> <b>{{game.home.score.T}}</b> - <b>{{game.away.score.T}}</b> <img src="http://i.nflcdn.com/static/site/7.4/img/logos/teams-matte-80x53/{{game.away.abbr}}.png"></h5>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-2 col-xs-offset-2"><b>Q1</b></div>
+                            <div class="col-xs-2"><b>Q2</b></div>
+                            <div class="col-xs-2"><b>Q3</b></div>
+                            <div class="col-xs-2"><b>Q4</b></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-2">{{game.home.abbr}}</div>
+                            <div class="col-xs-2"><b>{{game.home.score[1]}}</b></div>
+                            <div class="col-xs-2"><b>{{game.home.score[2]}}</b></div>
+                            <div class="col-xs-2"><b>{{game.home.score[3]}}</b></div>
+                            <div class="col-xs-2"><b>{{game.home.score[4]}}</b></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-2">{{game.away.abbr}}</div>
+                            <div class="col-xs-2"><b>{{game.away.score[1]}}</b></div>
+                            <div class="col-xs-2"><b>{{game.away.score[2]}}</b></div>
+                            <div class="col-xs-2"><b>{{game.away.score[3]}}</b></div>
+                            <div class="col-xs-2"><b>{{game.away.score[4]}}</b></div>
                         </div>
                     </div>
                 </div>
